[package]
name = "decorum"
version = "0.4.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
readme = "README.md"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
repository = "https://github.com/olson-sean-k/decorum"
description = "Total ordering, equivalence, hashing, and constraints for floating-point types."
keywords = [
    "finite",
    "float",
    "hash",
    "nan",
    "ordering",
]
categories = [
    "mathematics",
    "no-std",
    "rust-patterns",
]

[package.metadata.docs.rs]
all-features = true
# Enable KaTeX support.
rustdoc-args = [
    "--html-in-header",
    "doc/katex-header.html",
]

[features]
default = [
    "approx",
    "serde",
    "std",
]
## Implements traits from [`approx`](https://crates.io/crates/approx) for `Constrained` types.
approx = [
    "dep:approx",
]
## Derives `Pod` & `Zeroable` traits from [`bytemuck`](https://crates.io/crates/bytemuck) for `Constrained` types.
bytemuck = [
    "dep:bytemuck",
]
## Enable support for [`serde`](https://crates.io/crates/serde) for `Constrained` types.
serde = [
    "dep:serde",
    "dep:serde_derive",
]
## Integrates the `std` library and enables dependent features.
std = [
    "approx/std",
    "num-traits/std",
    "serde/std",
    "thiserror/std",
]
## Enables features that require an unstable (`nighty`) compiler.
unstable = []

[dependencies.approx]
version = "^0.5.0"
default-features = false
features = []
optional = true

[dependencies.bytemuck]
version = "^1.22"
features = ["derive"]
optional = true

[dependencies.document-features]
version = "0.2"

[dependencies.num-traits]
version = "^0.2.0"
default-features = false
features = []

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_derive]
version = "1.0"
default-features = false
optional = true

[dependencies.thiserror]
version = "^2.0.0"
default-features = false

[build-dependencies]
rustversion = "^1.0.3"

[dev-dependencies]
num = "^0.4.0"
serde_json = "1.0"
